force-app/main/default/objects/nFORCE__Feature_Dependency__mdt/fields/nFORCE__Dependency_Type__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Dependency_Type__c</fullName>
    <description>This field is required. It specifies the type of dependency that exists between the two features.</description>
    <label>Dependency Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
                <default>true</default>
                <label>Required</label>
            </value>
            <value>
                <fullName>Not Allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>