force-app/main/default/objects/nFORCE__Feature_Dependency__mdt/fields/nFORCE__Dependent_Feature__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Dependent_Feature__c</fullName>
    <description>This field is required. It specifies the feature that has a dependency on the controlling feature.</description>
    <label>Dependent Feature</label>
    <referenceTo>nFORCE__Feature__mdt</referenceTo>
    <relationshipLabel>Dependent Feature Dependencies</relationshipLabel>
    <relationshipName>Dependent_Feature_Dependencies</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>